[package]
name = "ringu"
version = "0.2.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
description= "Thread-safe no_std ring buffer"
license = "BSD-3-Clause"
edition = "2021"
categories = ["embedded", "no-std", "memory-management"]
keywords = [
    "buffer"
]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]

[dev-dependencies]
lazy_static = "1.4.0"
